# cmake-external-project-test

./: CMakeLists.txt  README.md
